# containers

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md
bash/: Dockerfile  entrypoint.sh
bash-geo/: Dockerfile  entrypoint.sh
demos/: RScript.sh  core.sh  python.sh  r.sh
demos/code/: generate_core.sh  script.R  script.py
python/: .pdm.toml  Dockerfile  entrypoint.sh  pyproject.toml
python-geo/: Dockerfile  entrypoint.sh  pyproject.toml
r/: Dockerfile  entrypoint.sh
