[project]
name = "Containers"
version = "0.1.0"
description = "Container images for simple script execution."
authors = [
    {name = "Sam Woodcock", email = "samuel.woodocck@wsl.ch"},
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "geopandas>=0.13.2",
    "gdal>=3.7.0",
    "rasterio>=1.3.8",
    "shapely>=2.0.1",
]
requires-python = ">=3.9,<3.12"
license = "MIT"
keywords = ["envidat", "wsl", "container", "script"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[project.urls]
homepage = "https://gitlabext.wsl.ch/EnviDat/containers"
documentation = "https://gitlabext.wsl.ch/EnviDat/containers"
repository = "https://gitlabext.wsl.ch/EnviDat/containers"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
